<resources>
    <string name="app_name">OxyNews</string>
    <string name="action_settings">Settings</string>
    <string name="article_title">Article Title</string>
    <string name="article_author">Article Author</string>
    <string name="article_date">Article Date</string>
    <string name="article_text">Article Text</string>
    <string name="final_article_author">Eliza Bodden</string>
    <string name="final_article_date">April 2, 2024</string>
    <string name="final_article_title">Study abroad more competitive than ever, many students denied for Fall 2024</string>
    <string name="recommended_articles">Recommended Articles:</string>
    <string name="oxy_news">Oxy News</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="search_titles">Search titles...</string>
    <string name="no_result_found">No result found.</string>
    <string name="home">Home</string>

    <string-array name="article_card_titles">
        <item>Article Title: Title of the Article</item>
    </string-array>

    <string-array name="article_card_authors">
        <item>Article Author</item>
    </string-array>

    <string-array name="article_card_dates">
        <item>Article Date</item>
    </string-array>

</resources>