<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeView">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/eagle_lake"
        android:text="@string/oxy_news"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/toSettings"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:srcCompat="@drawable/option" />

    <ImageView
        android:id="@+id/searchImage"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/toSettings"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:srcCompat="@drawable/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardRecyclerView"
        android:layout_width="399dp"
        android:layout_height="482dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSettings" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="226dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/search_titles"
        app:layout_constraintBottom_toTopOf="@+id/cardRecyclerView"
        app:layout_constraintEnd_toStartOf="@+id/toSettings"
        app:layout_constraintStart_toEndOf="@+id/searchImage"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <TextView
        android:id="@+id/noResult"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:text="@string/no_result_found"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardRecyclerView"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="480dp"
        android:text="@string/home"
        android:textColorLink="#FFA500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>